# notes_tt

./: .dockerignore  .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/config/: db.py  settings.py
app/migration/: env.py
app/migration/versions/: 27c8ab1282b8_initial_revision.py  3344c4cbe915_initial_revision.py  9a00709b77ad_initial_revision.py  a1832a0c1402_updated_note_model.py  a5e34bc3892c_initial_revision.py  e4baeda20808_initial_revision.py
app/notes/: models.py  router.py  schemas.py  service.py  utils.py
app/users/: auth.py  dependecies.py  models.py  router.py  schemas.py  service.py
